docs: update readme.md generated by Kimi2.5